--- a/resources/styles.css
+++ b/resources/styles.css
@@ -27,7 +27,7 @@
   text-anchor: "middle";
 }
 
-#sessionText{
+#currentIntervalText{
   font-family: "System-Regular";
   font-size: "30";
   text-anchor: "middle";
