heavy rewrite because I realized setInterval is not accurate.  Still needs alot of refactoring

--- a/resources/styles~300x300.css
+++ b/resources/styles~300x300.css
@@ -21,13 +21,13 @@
   text-length: "12";
 }
 
-#sprintCounter{
+#setCounter{
   font-family: "System-Regular";
   font-size: "30";
   text-anchor: "middle";
 }
 
-#currentIntervalText{
+#currentSprintText{
   font-family: "System-Regular";
   font-size: "30";
   text-anchor: "middle";
